curved border fixed on mobile

--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -5,6 +5,7 @@
 
 input {
   -webkit-appearance: none !important;
+  border-radius: 0 !important;
 }
 
 input:-webkit-autofill,
@@ -14,7 +15,7 @@ input:-webkit-autofill:active {
     -webkit-appearance: none !important;
     transition: background-color 5000s ease-in-out 0s;
     -webkit-text-fill-color: #fff !important;
-    border-radius: 0;
+    border-radius: 0 !important;
 }
 
 .input-field {
